syntax = "proto3";

option csharp_namespace = "ProtoToDoService";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package todoproto;

service ToDoService {
    rpc CreateToDo (CreateToDoRequest) returns (CreateToDoResponse);
    rpc UpdateToDo (UpdateToDoRequest) returns (google.protobuf.Empty);
}

message ToDo {
    int32 id = 1;
    string task = 2;
    bool isCompleted = 3;
}

message CreateToDoRequest {
    int32 userId = 1;
    string task = 2;
}

message CreateToDoResponse {
    ToDo toDo = 1;
    google.protobuf.Timestamp created_at = 2;
}

message UpdateToDoRequest {
    int32 userId = 1;
    int32 toDoId = 2;
    bool status = 3;
}
